Refactor skilltwin API routes
